<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="20dp"
    app:cardCornerRadius="20dp"
    android:layout_margin="10dp"
    android:id="@+id/cardItem">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_margin="10dp"
            android:id="@+id/ivThumbnail"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/transparent_logo"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/yellow"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitle"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/product_title"
            android:layout_margin="10dp"
            app:layout_constraintStart_toEndOf="@id/ivThumbnail"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPrice"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/product_price"
            android:layout_margin="10dp"
            app:layout_constraintStart_toEndOf="@id/ivThumbnail"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <View
            android:id="@+id/line"
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:background="@color/black"
            app:layout_constraintEnd_toStartOf="@id/tvBrand"
            app:layout_constraintStart_toEndOf="@id/tvPrice"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvBrand"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/product_brand"
            android:layout_margin="10dp"
            app:layout_constraintStart_toEndOf="@id/line"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>